# FaceRecognition

./: .gitignore  CMakeLists.txt  Dockerfile  DockerfileUnipi  README.md  cctv_streams.txt  run.sh
src/: DlibRecognition.cpp  DlibRecognition.hpp  FaceRec.cpp  FaceRec.hpp  UltraFace.cpp  UltraFace.hpp  main.cpp
